feat(ex-1): add 3 animals

--- a/ex-1-pricing-grid/index.html
+++ b/ex-1-pricing-grid/index.html
@@ -1,16 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
+    <title>Flexbox Exercise 1: Pricing Grid</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./style.css" />
-  <title>Flexbox Exercise 1: Pricing Grid</title>
-</head>
-
-<body>
-  <!-- Start coding here -->
-</body>
-
+  <body>
+    <div class="container">
+      <div class="box box-1">
+        <h1 class="animal-name">CAT</h1>
+        <p class="description">
+          Common, yet regarded by many as the worst house pet
+        </p>
+        <div class="trait-box">
+          <p class="trait">Scratches everything</p>
+          <p class="hr"></p>
+          <p class="trait">Easlly lost for days</p>
+          <p class="hr"></p>
+          <p class="trait">Kind of a bummer</p>
+        </div>
+        <h1 class="price">free</h1>
+        <button>😾 Really?</button>
+      </div>
+      <div class="box box-2">
+        <h1 class="animal-name">DOG</h1>
+        <p class="description">
+          Loving, gentle and caring. Dogs are the best house pet to have and
+          will increase happiness ten fold.
+        </p>
+        <div class="trait-box">
+          <p class="trait">Super Fun</p>
+          <p class="hr"></p>
+          <p class="trait">Friends love them</p>
+          <p class="hr"></p>
+          <p class="trait">Plays games</p>
+          <p class="hr"></p>
+          <p class="trait">Not a cat</p>
+        </div>
+        <h1 class="price">$90</h1>
+        <button>🐶 Best Deal➡️</button>
+      </div>
+      <div class="box box-3">
+        <h1 class="animal-name">FISH</h1>
+        <p class="description">Cheap n' easy.</p>
+        <div class="trait-box">
+          <p class="trait">Eats flakes</p>
+          <p class="hr"></p>
+          <p class="trait">Cop out</p>
+          <p class="hr"></p>
+          <p class="trait">Replaceable</p>
+        </div>
+        <h1 class="price">$3</h1>
+        <button> 🐟 </button>
+      </div>
+    </div>
+  </body>
 </html>
