feat(ex-1/index.html,style.css):add content

--- a/ex-1-pricing-grid/index.html
+++ b/ex-1-pricing-grid/index.html
@@ -1,16 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
+    <title>Flexbox Exercise 1: Pricing Grid</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./style.css" />
-  <title>Flexbox Exercise 1: Pricing Grid</title>
-</head>
-
-<body>
-  <!-- Start coding here -->
-</body>
-
+  <body>
+    <main>
+      <div class="container-1">
+        <h1 class="title">CAT</h1>
+        <p class="content">
+          Common, yet regarded by many as the worst house pet.
+        </p>
+        <div class="sub-content">
+          <p>Scratches everything</p>
+          <div class="divider"></div>
+          <p>Easily lost for days</p>
+          <div class="divider"></div>
+          <p>kin of a bummer</p>
+        </div>
+        <p class="price">free</p>
+        <div class="button-really">
+          <button type="submit">😾Really?</button>
+        </div>
+      </div>
+      <div class="container-2">
+        <h1 class="title">DOG</h1>
+        <p class="content">
+          Loving, gentle and caring. Dog are the beat house pet to have and will
+          increase happiness ten fold.
+        </p>
+        <div class="sub-content">
+          <p>Super Fun</p>
+          <div class="divider"></div>
+          <p>Friends love them</p>
+          <div class="divider"></div>
+          <p>Play games</p>
+          <div class="divider"></div>
+          <p>Not a cat</p>
+        </div>
+        <p class="price">$90</p>
+        <div class="button-really">
+          <button type="submit">🐶Best Deal →</button>
+        </div>
+      </div>
+      <div class="container-3">
+        <h1 class="title">FISH</h1>
+        <p class="content">Cheap n'easy.</p>
+        <div class="sub-content">
+          <p>Eats flakes</p>
+          <div class="divider"></div>
+          <p>Cop out</p>
+          <div class="divider"></div>
+          <p>Replaceable</p>
+          <div class="divider"></div>
+          <p>Not a cat</p>
+        </div>
+        <p class="price">$90</p>
+        <div class="button-really">
+          <button type="submit">🐠</button>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
