--- a/ex2-holygrail-layout/index.html
+++ b/ex2-holygrail-layout/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
+    <title>Flexbox Exercise 2: Holygrail Layout</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./style.css" />
-  <title>Flexbox Exercise 2: Holygrail Layout</title>
-</head>
-
-<body>
-  <!-- Start coding here -->
-</body>
-
+  <body>
+    <div class="container">
+      <header class="section">Header</header>
+      <div class="section body">
+        <div class="body-content nav">Navigation</div>
+        <div class="body-content content">Content</div>
+        <div class="body-content ad">Advertisement</div>
+      </div>
+      <footer class="section">Footer</footer>
+    </div>
+  </body>
 </html>
