feat(index&style): create blog pet promotion

--- a/ex-1-pricing-grid/index.html
+++ b/ex-1-pricing-grid/index.html
@@ -1,16 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
+    <title>Flexbox Exercise 1: Pricing Grid</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./style.css" />
-  <title>Flexbox Exercise 1: Pricing Grid</title>
-</head>
-
-<body>
-  <!-- Start coding here -->
-</body>
-
+  <body>
+    <!-- Start coding here -->
+    <div class="promotion">
+      <div class="cat-pro">
+        <p class="title-cat">CAT</p>
+        <p class="detail-cat">
+          Common,yet regarded by mana as the worst house pet.
+        </p>
+        <ul class="list-cat">
+          <li class="list">Scratches everything</li>
+          <li class="list">Easily lost for days</li>
+          <li class="list-last">Kind of a bummer</li>
+        </ul>
+        <p class="price-cat">Free</p>
+        <button class="button-cat">Really?</button>
+      </div>
+      <div class="dog-pro">
+        <p class="title-dog">DOG</p>
+        <p class="detail-dog">
+          Loving,gentle and caring. Dogs are the best house pet to have and will
+          increase happiness ten fold.
+        </p>
+        <ul class="list-dog">
+          <li class="list">Super Fun</li>
+          <li class="list">Friends love them</li>
+          <li class="list">Plays games</li>
+          <li class="list-last">Not a cat</li>
+        </ul>
+        <p class="price-dog">$90</p>
+        <button class="button-dog">Best Deal →</button>
+      </div>
+      <div class="fish-pro">
+        <p class="title-dog">FISH</p>
+        <ul class="list-fish">
+          <li class="list">Cheap n' easy.</li>
+          <li class="list">Eats flakes</li>
+          <li class="list">Cop out</li>
+          <li class="list-last">Replaceable</li>
+        </ul>
+        <p class="price-fish">$3</p>
+        <button class="button-fish">☺</button>
+      </div>
+    </div>
+  </body>
 </html>
